 ! Base: It wasn't compatible with another mod, my own! (Oh the shame!) (PackageGet.php)
 + Base: Transliterate some Cyrillic characters. (Subs-PrettyUrls.php)
 % Removed the TP-ext-none package, and moved its changes to the ext-none package.
 ! ext-none: Added error="skip" attributes to many less essential changes so it will have a better chance of installing.

Pretty URLs 0.3                                                 January 20, 2007
================================================================================
 + Base: Added some Turkish (and other) characters. (Subs-PrettyUrls.php)
 ! ext-none: Fixed some problems in SSI.php.
 + Base: Give new topics a pretty URL. (Subs-Post.php)
 + TP-ext-none: Change the URLs of the front page in TP_boardNews(). (TPortal.php)
 + ext-none: Change the URLs of Stats.php.
 + Added a Package List. (packages.xml)
 + Base: Added the canonicaliseUrl() function to fix relative URLs. (PackageGet.php)

Pretty URLs 0.2                                                December 26, 2006
================================================================================
 ! Base: Don't give pretty URLs to recycled topics, and fixed '&quot;' issues. (Subs-PrettyUrls.php)
 ! Base: Adding and changing board URLs is now done through modifyBoard(). (Subs-Boards.php)
 ! ext-none: Fixed the Display template because a change hadn't been committed somehow.
 ! Base: Don't add an action in .htaccess because it won't work with an invalid board URL. (QueryString.php)
 + ext-none: Replace topic urls in SSI.php, News.php and Recent.php.

Pretty URLs 0.1                                                December 13, 2006
================================================================================
 + Base: Added generatePrettyUrl function and $characterHash with almost all characters from latin-1. (Subs-PrettyUrls.php)
 + Base: Generate the pretty URLs of the forum's boards. (install.php)
 + Base: Included an example .htaccess file (example.htaccess)